# swri_console

./: CMakeLists.txt
include/swri_console/: console_master.h  console_window.h  ros_source_backend.h
src/: console_master.cpp  console_window.cpp  log_database_proxy_model.cpp  main.cpp  node_list_model.cpp  ros_source_backend.cpp
